<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.barracuda.ui.ChatActivity">
    <item
        android:id="@+id/changeImg"
        android:orderInCategory="100"
        android:title="@string/backgrounds"/>
    <item
        android:id="@+id/removeFromBlackList"
        android:orderInCategory="105"
        android:title="@string/removeFromBlackList"/>

    <item
        android:id="@+id/mediaHistory"
        android:orderInCategory="107"
        android:title="@string/mediaHistory"
        app:showAsAction="never"/>
    <item
        android:id="@+id/forbidden"
        android:orderInCategory="106"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_forbidden"/>
    <item
        android:id="@+id/audio_call"
        android:orderInCategory="101"
        android:icon="@drawable/audio_call"
        app:showAsAction="always"
        android:title="@string/audio_call"
        android:enabled="false" />
    <item
        android:id="@+id/video_call"
        android:orderInCategory="102"
        android:icon="@drawable/video_call"
        app:showAsAction="always"
        android:title="@string/video_call"
        android:enabled="false"/>

    <item
        android:id="@+id/addFavorites"
        android:orderInCategory="104"
        android:title="@string/addFavorites"
        android:enabled="false"
        android:visible="false"
        app:showAsAction="always"
        android:icon="@drawable/favorite"/>

    <item
      android:id="@+id/removeMessage"
      android:orderInCategory="108"
      android:title="@string/removeMessage"
      android:enabled="false"
      android:visible="false"
      app:showAsAction="always"
      android:icon="@drawable/trash"/>

    <item
      android:id="@+id/incognitoSwitcher"
      android:orderInCategory="109"
      android:title="@string/incognito"
      app:showAsAction="never"/>
</menu>
