<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.barracuda.MainActivity">

    <!--<item-->
        <!--android:id="@+id/incognito"-->
        <!--android:checkable="true"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/incognito"-->
        <!--app:showAsAction="never" />-->
    <item
        android:id="@+id/setProfile"
        android:orderInCategory="101"
        android:title="@string/profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/favMes"
        android:orderInCategory="102"
        android:title="@string/fav_messages"
        app:showAsAction="never" />
    <item
      android:id="@+id/account.blacklist"
      android:orderInCategory="103"
      android:title="@string/blacklist"
      app:showAsAction="never" />
    <item
        android:id="@+id/account"
        android:orderInCategory="103"
        android:title="@string/account"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/account.rules"
                android:orderInCategory="200"
                android:title="@string/rules"
                app:showAsAction="never" />
            <item
                android:id="@+id/account.contract"
                android:orderInCategory="201"
                android:title="@string/contract"
                app:showAsAction="never" />
            <!--<item-->
                <!--android:id="@+id/account.blacklist"-->
                <!--android:orderInCategory="202"-->
                <!--android:title="@string/blacklist"-->
                <!--app:showAsAction="never" />-->
        </menu>
    </item>

    <item
      android:id="@+id/chats.themes"
      android:orderInCategory="104"
      android:title="@string/themes"
      app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/chats"-->
        <!--android:orderInCategory="104"-->
        <!--android:title="@string/chats"-->
        <!--app:showAsAction="never">-->

        <!--<menu>-->
            <!--&lt;!&ndash;<item&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/chats.themes"&ndash;&gt;-->
                <!--&lt;!&ndash;android:orderInCategory="201"&ndash;&gt;-->
                <!--&lt;!&ndash;android:title="@string/themes"&ndash;&gt;-->
                <!--&lt;!&ndash;app:showAsAction="never" />&ndash;&gt;-->
            <!--&lt;!&ndash;<item&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/chats.copies"&ndash;&gt;-->
            <!--&lt;!&ndash;android:orderInCategory="202"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="@string/copy"&ndash;&gt;-->
            <!--&lt;!&ndash;app:showAsAction="never">&ndash;&gt;-->
            <!--&lt;!&ndash;<menu>&ndash;&gt;-->
            <!--&lt;!&ndash;<item&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/chats.copies.copy"&ndash;&gt;-->
            <!--&lt;!&ndash;android:orderInCategory="301"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="@string/create_copy"&ndash;&gt;-->
            <!--&lt;!&ndash;app:showAsAction="never"/>&ndash;&gt;-->
            <!--&lt;!&ndash;<item&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/chats.copies.recover"&ndash;&gt;-->
            <!--&lt;!&ndash;android:orderInCategory="302"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="@string/recover"&ndash;&gt;-->
            <!--&lt;!&ndash;app:showAsAction="never"/>&ndash;&gt;-->
            <!--&lt;!&ndash;</menu>&ndash;&gt;-->
            <!--&lt;!&ndash;</item>&ndash;&gt;-->
            <!--&lt;!&ndash;<item&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/chats.delete"&ndash;&gt;-->
            <!--&lt;!&ndash;android:orderInCategory="202"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="@string/delete_all_chats"&ndash;&gt;-->
            <!--&lt;!&ndash;app:showAsAction="never"/>&ndash;&gt;-->
            <!--&lt;!&ndash;<item&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/chats.clear"&ndash;&gt;-->
            <!--&lt;!&ndash;android:orderInCategory="203"&ndash;&gt;-->
            <!--&lt;!&ndash;android:title="@string/clear_all_chats"&ndash;&gt;-->
            <!--&lt;!&ndash;app:showAsAction="never"/>&ndash;&gt;-->
        <!--</menu>-->

    <!--</item>-->
    <!--<item-->
        <!--android:id="@+id/notification"-->
        <!--android:orderInCategory="105"-->
        <!--android:title="@string/notification"-->
        <!--app:showAsAction="never" />-->
    <!--<item-->
        <!--android:id="@+id/help"-->
        <!--android:orderInCategory="106"-->
        <!--android:title="@string/help"-->
        <!--app:showAsAction="never" />-->
</menu>
