<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.v7.widget.CardView
    android:id="@+id/cv"
    android:layout_width="300dp"
    android:layout_height="220dp"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp">

        <View
          android:layout_width="8dp"
          android:layout_height="match_parent"
          android:layout_alignParentStart="true"
          android:background="#2fa881" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginStart="50dp"
          android:text="@string/login"
          android:textColor="#FFCC00"
          android:textSize="18sp"
          android:textStyle="bold" />
      </RelativeLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingEnd="30dp"
        android:paddingStart="50dp">

        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColorHint="#c5c5c5">

          <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bg_edit"
            android:hint="@string/phone_number"
            android:inputType="numberDecimal"
            android:paddingBottom="2dp"
            android:textColor="#2fa881"
            android:textCursorDrawable="@drawable/bg_input_cursor"
            android:textSize="13sp" />
        </android.support.design.widget.TextInputLayout>
      </LinearLayout>

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center">

        <Button
          android:id="@+id/bt_go"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:background="@drawable/bt_shape"
          android:onClick="clickLogin"
          android:stateListAnimator="@drawable/state_list_animator_z"
          android:text="@string/enter"
          android:textColor="#3dece0"
          tools:targetApi="lollipop" />
      </RelativeLayout>
    </LinearLayout>
  </android.support.v7.widget.CardView>

</RelativeLayout>
